carrie nation fix

--- a/carrie.html
+++ b/carrie.html
@@ -50,17 +50,17 @@
 
         <p>[SLIDE]</p>
 
-        <p>Carry Nation and Prohibition</p>
+        <p>Carrie Nation and Prohibition</p>
 
         <p>So only two things in the Constitution limit the behavior of individuals (everything else limits government). Those two things are the 13th Amendment which says you can't own slaves and the 18th Amendment said you couldn't have a drink. Now that second one, how did that happen?</p>
 
         <p>The 21st Amendment, which repealed Prohibition, was ratified by the US Congress in 1933. But let me take you back to 1900.</p>
 
-        <p>June of 1900 to be exact, when A self righteous, by all accounts quite unpleasant woman in Kansas had a religious vision. Or at least she said she did. Her name was Carry Nation.</p>
+        <p>June of 1900 to be exact, when A self righteous, by all accounts quite unpleasant woman in Kansas had a religious vision. Or at least she said she did. Her name was Carrie Nation.</p>
 
         <p>[SLIDE]</p>
 
-        <p>Years later when she wrote her autobiography (dramatically entitled The Use and Need of the Life of Carry Nation) in which she all but named herself a saint, she said that God spoke to her in a clear voice and directed her to go destroy saloons. God told her to leave Medicine Lodge, Kansas where she lived and go to Kiowa, Kansas, and destroy any saloons she found there and she did. Like destroy them.</p>
+        <p>Years later when she wrote her autobiography (dramatically entitled The Use and Need of the Life of Carrie Nation) in which she all but named herself a saint, she said that God spoke to her in a clear voice and directed her to go destroy saloons. God told her to leave Medicine Lodge, Kansas where she lived and go to Kiowa, Kansas, and destroy any saloons she found there and she did. Like destroy them.</p>
 
         <p>First in Kansas, then around the entire country she would lead a brigade of prohibitionist “smashers” who would storm these turn-of-the-century bars and she would use big rocks, bricks, hammers, and eventually what came to be her trademark: a hatchet (seen here) to smash bottles of liquor and just lay waste to these saloons, all in the name of Christian decency. She was on a crusade for temperance. And her efforts, along with many other groups like the Women's Christian Temperance Union, the Anti-Saloon League and the Prohibition Party actually succeeded in outlawing alcohol in the U.S. for 13 dumb years.</p>
 
@@ -68,7 +68,7 @@
 
         <p>[SLIDE]</p>
 
-        <p>Carry Amelia Moore was born in 1846 on a plantation in Kentucky. Many of her family members suffered from mental illness, her mother at times having delusions of being Queen Victoria. Her first husband was a severe alcoholic, having picked up the habit as a soldier in the Civil War (I guess that happened a lot). The marriage was very unhappy. It only lasted a year and the guy dies from drinking a year after that. She then marries this guy David A. Nation. He's an attorney, minister, newspaper editor and farmer all of which he failed at spectacularly. Then he became embroiled in the Jaybird-Woodpecker War (I know, I never heard of it either) (1888-90) which was basically a land dispute in Texas. As a result, the family was forced to move north to Medicine Lodge, Kansas. It was there that Carrie Nation began her temperance work.</p>
+        <p>Carrie Amelia Moore was born in 1846 on a plantation in Kentucky. Many of her family members suffered from mental illness, her mother at times having delusions of being Queen Victoria. Her first husband was a severe alcoholic, having picked up the habit as a soldier in the Civil War (I guess that happened a lot). The marriage was very unhappy. It only lasted a year and the guy dies from drinking a year after that. She then marries this guy David A. Nation. He's an attorney, minister, newspaper editor and farmer all of which he failed at spectacularly. Then he became embroiled in the Jaybird-Woodpecker War (I know, I never heard of it either) (1888-90) which was basically a land dispute in Texas. As a result, the family was forced to move north to Medicine Lodge, Kansas. It was there that Carrie Nation began her temperance work.</p>
 
         <p>[SLIDE]</p>
 
@@ -76,7 +76,7 @@
 
         <p>[SLIDE]</p>
 
-        <p>But to sum her up, Carry Nation was a great American huckster. She made a habit and career out of these saloon smashings and called them "hatchetations." She had a traveling sideshow manager promoting these hatchetations as a road show. She started a newsletter called The Smasher's Mail.</p>
+        <p>But to sum her up, Carrie Nation was a great American huckster. She made a habit and career out of these saloon smashings and called them "hatchetations." She had a traveling sideshow manager promoting these hatchetations as a road show. She started a newsletter called The Smasher's Mail.</p>
 
         <p>[SLIDE]</p>
 
@@ -84,7 +84,7 @@
 
         <p>But she did really believe she was doing good. She described herself as "a bulldog running along at the feet of Jesus, barking at what he doesn't like."</p>
 
-        <p>In the bible, Jeremiah 1:10 reads "See, I have this day set thee over the nation and over the kingdoms, to root out, and to pull down, and to destroy, and to throw down, to build, and to plant." In her bible, Carry Nation marked this passage with the notation, "Smashing." I love that.</p>
+        <p>In the bible, Jeremiah 1:10 reads "See, I have this day set thee over the nation and over the kingdoms, to root out, and to pull down, and to destroy, and to throw down, to build, and to plant." In her bible, Carrie Nation marked this passage with the notation, "Smashing." I love that.</p>
 
         <p>Anyway, she died in 1911 so she didn't live to see it but her efforts did help lead to Prohibition, passed in 1920.</p>
 
