seating chart, conversation topics

--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -210,6 +210,49 @@
             </div>
         </div>
     </section>
+    <section class="section-padding" id="seating">
+        <div class="container">
+            <div class="row">
+                <div>
+                    <h2 class="col-md-12 text-center">Seating Chart</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-5 col-md-offset-1">
+                    <img src="img/seating-chart-1.png" alt="seating chart 1" class="seating">
+                </div>
+                <div class="col-md-5">
+                    <img src="img/seating-chart-2.png" alt="seating chart 2" class="seating">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="features section-padding" id="conversation">
+        <div class="container">
+            <div class="row">
+                <div>
+                    <h2 class="col-md-12 text-center">Conversation Topics</h2>
+                    <h3 class="col-md-12 text-center conversation-topics-header">Talk amongst yourselves. I’ll give you a topic; discuss.</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <ol class="conversation-topics col-md-8 col-md-offset-2">
+                        <li><span>If you could have access to the entire anthology of a single TV show but no other, what would it be?</span></li>
+                        <li><span>Would you spend a week in solitary confinement with no cell mates in exchange for free flights anywhere in the world for a year?</span></li>
+                        <li><span>Does happiness correlate to relative income or absolute income?</span></li>
+                        <li><span>Should we have a military draft?</span></li>
+                        <li><span>Will you reject or embrace these coming scientific advances: driverless cars, domesticated parasites, lab-grown meat.</span></li>
+                        <li><span>How do you make sure you challenge your fundamental assumptions from time to time?</span></li>
+                        <li><span>If there is one thing you could change about how our government is set up, what would it be?</span></li>
+                        <li><span>Are “care” and “worry” the same thing?</span></li>
+                        <li><span>Is it better to vote for a candidate whose policies you agree with but who is generally considered un-electable and may divert votes away from your second choice or should you vote for your second choice as they are the lesser of two more-electable evils?</span></li>
+                        <li><span>What's your favorite Bill Murray movie?</span></li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="section-padding" id="brooklyn">
         <div class="container">
             <div class="row">
@@ -466,6 +509,8 @@
                         <ul class="footer-group">
                             <li><a href="#event">event</a></li>
                             <li><a href="#readings">readings</a></li>
+                            <li><a href="#seating">seating</a></li>
+                            <li><a href="#conversation">conversation</a></li>
                             <li><a href="#brooklyn">brooklyn</a></li>
                             <li><a href="#accommodations">accommodations</a></li>
                             <li><a href="#transportation">transport</a></li>
