fix hashtag text

--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -426,8 +426,8 @@
                     <h2>What's with the hashtag?</h2>
                 </div>
                 <div class="col-md-8 col-md-offset-2">
-                    <p>The hashtag is to help collect photos from the evening. If you post any to <a href="https://instagram.com/chrisbup/" target="_blank">Instagram</a>, <a href="https://www.facebook.com/chris.heuberger" target="_blank">Facebook</a>, or <a href="https://twitter.com/chrisbup" target="_blank">Twitter</a>, please tag it with <strong>#GtrainLoveStory</strong> and they will automatically be added to our wedding album on Flickr.</p>
-                    <p>You can also add photos directly to the <a href="https://flic.kr/g/qZ1sq" target="_blank">Flickr allbum</a>.</p>
+                    <p>The hashtag is to help collect photos from the evening. If you post any to <a href="https://instagram.com/chrisbup/" target="_blank">Instagram</a>, <a href="https://www.facebook.com/chris.heuberger" target="_blank">Facebook</a>, or <a href="https://twitter.com/chrisbup" target="_blank">Twitter</a>, please tag it with <strong>#GtrainLoveStory</strong> and they will be added to our wedding album on Flickr.</p>
+                    <p>You can also add photos directly to the <a href="https://flic.kr/g/qZ1sq" target="_blank">Flickr album</a>.</p>
                 </div>
             </div>
         </div>
