update media queries

--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -159,7 +159,7 @@
                 <div class="col-md-1">
                     <h5 class="brighten text-right poem-number">1.</h5>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 poem">
                     <h5>Forever&#8212;is composed of Nows</h5>
                     <h6>by Emily Dickinson</h6>
                     <br>
@@ -186,7 +186,7 @@
                 <div class="col-md-1">
                     <h5 class="brighten text-right poem-number">2.</h5>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 poem">
                     <h5>Count That Day Lost </h5>
                     <h6>by George Eliot</h6>
                     <br>
@@ -426,8 +426,8 @@
                     <h2>What's with the hashtag?</h2>
                 </div>
                 <div class="col-md-8 col-md-offset-2">
-                    <p>The hashtag is to help collect photos from the evening. If you post any to <a href="https://instagram.com/chrisbup/" target="_blank">Instagram</a>, <a href="https://www.facebook.com/chris.heuberger" target="_blank">Facebook</a>, or <a href="https://twitter.com/chrisbup" target="_blank">Twitter</a>, please tag it with <strong>#GtrainLoveStory</strong> and they will be added to our wedding album on Flickr.</p>
-                    <p>You can also add photos directly to the <a href="https://flic.kr/g/qZ1sq" target="_blank">Flickr album</a>.</p>
+                    <p>The hashtag is to help collect photos from the evening. If you post any to <a href="https://instagram.com/chrisbup/" target="_blank">Instagram</a>, <a href="https://www.facebook.com/chris.heuberger" target="_blank">Facebook</a>, or <a href="https://twitter.com/chrisbup" target="_blank">Twitter</a>, please tag it with <strong>#GtrainLoveStory</strong> and they will be added to our wedding album on Flickr. You can also add photos directly to the <a href="https://flic.kr/g/qZ1sq" target="_blank">Flickr album</a>.</p>
+                    <p>The G Train runs north/south, primarily in Brooklyn and hits (most of) the best neighborhoods. When we first met, Jllian lived at the top of the G Train in Greenpoint and I lived further south, off the same line in Bushwick. The G has taken us on many an adventure since and many more to come. So here’s to the G!</p>
                 </div>
             </div>
         </div>
