hashtag wording fix

--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -427,7 +427,7 @@
                 </div>
                 <div class="col-md-8 col-md-offset-2">
                     <p>The hashtag is to help collect photos from the evening. If you post any to <a href="https://instagram.com/chrisbup/" target="_blank">Instagram</a>, <a href="https://www.facebook.com/chris.heuberger" target="_blank">Facebook</a>, or <a href="https://twitter.com/chrisbup" target="_blank">Twitter</a>, please tag it with <strong>#GtrainLoveStory</strong> and they will be added to our wedding album on Flickr. You can also add photos directly to the <a href="https://flic.kr/g/qZ1sq" target="_blank">Flickr album</a>.</p>
-                    <p>The G Train runs north/south, primarily in Brooklyn and hits (most of) the best neighborhoods. When we first met, Jllian lived at the top of the G Train in Greenpoint and I lived further south, off the same line in Bushwick. The G has taken us on many an adventure since and many more to come. So here’s to the G!</p>
+                    <p>The G Train runs north/south, primarily in Brooklyn and hits (most of) the best neighborhoods. When we first met, Jllian lived at the top of the G Train in Greenpoint and I lived further south, off the same line in Bushwick. The G has taken us on many an adventure since and will surely bring us on many more to come. So here’s to the G!</p>
                 </div>
             </div>
         </div>
