--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -133,7 +133,7 @@
                     </ul>
                     <br>
                     <p class="brighten">Rides will be provided from the church to the restaurant and will begin at <strong>5:15pm</strong>.</p>
-                    <h3>Now featuring Morgan O'Kane!</h3>
+                    <h3>now Now featuring Morgan O'Kane!</h3>
                     <p>After dinner, anyone who would like to will be welcome to join us upstairs at Saint Mazie for a set by <a href="http://narrative.ly/stories/the-ol-banjo-sounds-good/" target="_blank">Morgan O’Kane</a> from <strong>9–10pm</strong>.</p>
                     <div class="morgan-okane-viddy">
                         <iframe src="https://player.vimeo.com/video/26868397?color=00f0c8&title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
