--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -244,7 +244,7 @@
                         <li><span>If you could have access to the entire anthology of a single TV show but no other, what would it be?</span></li>
                         <li><span>Would you spend a week in solitary confinement with no cell mates in exchange for free flights anywhere in the world for a year?</span></li>
                         <li><span>Does happiness correlate to relative income or absolute income?</span></li>
-                        <li><span>Should we have a military draft?</span></li>
+                        <li><span>Should we have a military draft / compulsory public service?</span></li>
                         <li><span>Will you reject or embrace these coming scientific advances: driverless cars? domesticated parasites? lab-grown meat?</span></li>
                         <li><span>How do you make sure you challenge your fundamental assumptions from time to time?</span></li>
                         <li><span>If there is one thing you could change about how our government is set up, what would it be?</span></li>
