fix convo topics wording

--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -249,7 +249,7 @@
                         <li><span>How do you make sure you challenge your fundamental assumptions from time to time?</span></li>
                         <li><span>If there is one thing you could change about how our government is set up, what would it be?</span></li>
                         <li><span>Are “care” and “worry” the same thing?</span></li>
-                        <li><span>Is it better to vote for a candidate whose policies you agree with but who is generally considered un-electable and may divert votes away from your second choice or should you vote for your second choice as they are the lesser of two more-electable evils?</span></li>
+                        <li><span>Is it better to vote for a candidate whose policies you agree with but who is generally considered un-electable and may divert votes away from your second choice or should you vote for your second choice as they are a viable alternative to your least preferred candidate?</span></li>
                         <li><span>What's your favorite Bill Murray movie?</span></li>
                     </ol>
                 </div>
