--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -84,7 +84,7 @@
             <div class="row">
                 <div class="col-md-6 intro-feature">
                     <div class="col-md-offset-1 intro-content">
-                        <h6>ceremony &middot; 4:30pm&#8211;5pm</h6>
+                        <h6 class="ceremony-info">ceremony &middot; 4:30pm&#8211;5pm</h6>
                         <p><a href="http://www.ascensionbrooklyn.org/" target="_blank">Church of the Ascension</a><br>
                         127 Kent Street near Manhattan Avenue<br>
                         <em>Near the Greenpoint Avenue stop on the G Train</em></p>
