--- a/gtrainlovestory/index.html
+++ b/gtrainlovestory/index.html
@@ -84,7 +84,7 @@
             <div class="row">
                 <div class="col-md-6 intro-feature">
                     <div class="col-md-offset-1 intro-content">
-                        <h6 class="ceremony-info">ceremony &middot; 4:30pm&#8211;5pm</h6>
+                        <h6>ceremony &middot; 4:30pm&#8211;5pm</h6>
                         <p><a href="http://www.ascensionbrooklyn.org/" target="_blank">Church of the Ascension</a><br>
                         127 Kent Street near Manhattan Avenue<br>
                         <em>Near the Greenpoint Avenue stop on the G Train</em></p>
@@ -120,7 +120,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <h2>Ceremony Schedule</h2>
-                    <h6>The ceremony will take place at <strong>4:30pm</strong> but guests can begin arriving at <strong>4pm.</strong></h6>
+                    <h6 class="ceremony-info">The ceremony will take place at <strong>4:30pm</strong> but guests can begin arriving at <strong>4pm.</strong></h6>
                     <ul>
                         <li>prelude</li>
                         <li>processional</li>
