--- a/our-trip-to-peru/index.html
+++ b/our-trip-to-peru/index.html
@@ -59,7 +59,7 @@
         <h2 class="video-title">Our Peru Home Movie</h2>
         <div class="responsive-video">
           <iframe width="640" height="360" src="https://www.youtube.com/embed/GzJp-6n4JDA?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-        </div
+        </div>
       </div>
       <div class="col-md-10 col-xs-12">
         <h5 class="video-caption">The video quality is terrible and the camera work is dizzying but it’s like mostly llamas.</h5>
@@ -1958,7 +1958,7 @@
           </a>    
         </li>
         <li class="col-lg-2 col-sm-3 col-xs-12">
-          <a href="img/large/351.jpg" title="" data-gallery>
+          <a href="img/large/351.jpg" title="Pure happy exhaustion." data-gallery>
             <figure class="thumb-container"><img src="img/llama.png" data-src="img/thumb/351.jpg" alt="351" class="thumb" /></figure>
           </a>    
         </li>
@@ -3887,7 +3887,7 @@
 
       <p>In 1527, <strong>Francisco Pizarro</strong>, the Spanish conquistador first met the Incas in northern Peru. He would eventually conquer them and name himself the first governor of Peru. <strong>Diego de Almagro</strong>, one of Pizarro's two original partners, embittered by his small share of the plunder, would start a war against the Pizarros. He lost that war and was executed but his supporters eventually killed Pizarro.</p>
 
-      <p><strong>Atahualpa</strong> (Ah-tah-WAHL-pah) was the Inca emperor during Pizarro's conquest of Peru. After the sudden death of his father, the emperor strong, he defeated his half brother, <strong>Huascar</strong>, in a 5-year civil war that devastated the empire and made the Inca susceptible to the Spanish. When captured in 1532, Atahualpa offered a ransom for his own freedom (some scholars believe it was only for his life): two rooms filled with silver and one room filled with gold which the Spanish accepted. However, Pizarro saw his prisoner as a vulnerability so he still had Atahualpa executed in 1533.</p>
+      <p><strong>Atahualpa</strong> (Ah-tah-WAHL-pah) was the Inca emperor during Pizarro's conquest of Peru. After the sudden death of his father, the emperor <strong>Huayna C&aacute;pac</strong>, he defeated his half brother, <strong>Huascar</strong>, in a 5-year civil war that devastated the empire and made the Inca susceptible to the Spanish. When captured in 1532, Atahualpa offered a ransom for his own freedom (some scholars believe it was only for his life): two rooms filled with silver and one room filled with gold which the Spanish accepted. However, Pizarro saw his prisoner as a vulnerability so he still had Atahualpa executed in 1533.</p>
 
       <p><strong>Manco Inca Yupanqui</strong> (Man-KOH-Een-KAH Yoo-PAN-kee) was then named Inca king, selected by Francisco Pizarro as a puppet ruler in 1533. But Manco soon led a rebellion against his occupiers and fled to <strong>Vitcos</strong> in 1537, before establishing <strong>Vilcabamba</strong> in the rain forest as the new Inca capital. During that retreat, he destroyed a number of settlements along the Inca road system to discourage Spanish pursuit.</p>
 
@@ -3909,7 +3909,7 @@
         <div class="col-xs-12">
           <h2 class="gallery-title"><i class="glyphicon glyphicon-pencil"></i> | SKETCHES</h2>
           <p>Here's everything, including some doodles from the plane. Every evening on the trail, I'd find a spot, bring out my sketchbook, and draw until the sun went down and every time, porters would gather round to look over my shoulder. Flavio asked if I was an architect. An architect, Jerry!</p>
-          <p>There's a <strong>tumi</strong> (a ceremonial Inca knife), a puma (Cusco is actually shaped like one), and the last one was at Ollantaytambo. Jillian started it and I added some shading.</p>
+          <p>There's a <strong>tumi</strong> (a ceremonial Inca knife), a couple pumas (Cusco is actually shaped like one), and the last one was at Ollantaytambo. Jillian started it and I added some shading.</p>
         </div>
       </div>
 
