--- a/photo.html
+++ b/photo.html
@@ -57,7 +57,6 @@
 
     <div class="main-content">
       <h1 class="all-caps">PHOTO</h1>
-      <span class='close all-caps'>CLOSE (X)</span>
       <br>
       <div class='grid'>
         <img src="images/photo/fb1.jpg">
@@ -83,8 +82,11 @@
         <img src="images/photo/pic-messagero.jpg">
         <img src="images/photo/pic-peluso.jpg">
       </div>
-      <img class="large" src="">
-      <div class='explainer'></div>
+      <div class="popup">
+        <span class='close all-caps'>CLOSE (X)</span>
+        <img class="large" src="">
+        <div class='explainer'></div>
+      </div>
       <div class='shorten'><br><hr><br></div>
       <p class='top'>top</p>
       <footer>
