--- a/play.html
+++ b/play.html
@@ -94,7 +94,6 @@
       </p>
     </div>
     <div class='bump'></div>
-    <span class='close all-caps'>CLOSE (X)</span>
     <br>
     <div class='grid'>
       <img src="images/play/ex1.jpg">
@@ -193,8 +192,11 @@
       <img src="images/play/doodle036.jpg">
       <img src="images/play/doodle039.jpg">
     </div>
-    <img class="large" src="">
-    <div class='explainer'></div>
+    <div class="popup">
+      <span class='close all-caps'>CLOSE (X)</span>
+      <img class="large" src="">
+      <div class='explainer'></div>
+    </div>
     <div class='shorten'><br><hr><br></div>
     <p class='top'>top</p>
     <footer>
