--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       
       <div id='intro'>
         <span class="close-intro">&times;</span>
-        <h3 class='highlight'>Hi, I'm a web developer and UX designer at <a href="http://www.radishlab.com">Radish Lab</a> in Brooklyn. I also run <a href="about.html">The Bushwick Brewing Tour</a> and <a href="about.html">Run & Brunch</a>. I'm an environmentalist, history nerd, runner, and fanny pack enthusiast. I'm into social impact projects, data visualization, typography, and all forms of design. Nice to meet ya.</h3>        
+        <h3 class='highlight'>Hi, I'm a web developer and UX designer at <a href="http://www.radishlab.com" target="_blank">Radish Lab</a> in Brooklyn. I also run <a href="about.html">The Bushwick Brewing Tour</a> and <a href="about.html">Run & Brunch</a>. I'm an environmentalist, history nerd, runner, and fanny pack enthusiast. I'm into social impact projects, data visualization, typography, and all forms of design. Nice to meet ya.</h3>        
       </div>
       <div class='venn'>
         <h2 class='interests'>INTERESTS</h2>
